--- a/SentinelsOfTheMultiverse/MainWindow.xaml
+++ b/SentinelsOfTheMultiverse/MainWindow.xaml
@@ -3,8 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <TextBox Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="70,0,0,0">hand</TextBox>
+        <TextBox Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="270,0,0,0">deck</TextBox>
         <ListView Height="223" HorizontalAlignment="Left" Margin="70,50,0,0" 
-          Name="listView1" VerticalAlignment="Top" Width="363" ItemsSource="{Binding hand}"/>
+          Name="handListView" VerticalAlignment="Top" Width="163" ItemsSource="{Binding hand}"/>
+        <ListView Height="223" HorizontalAlignment="Left" Margin="270,50,0,0" 
+          Name="deckListView" VerticalAlignment="Top" Width="163" ItemsSource="{Binding deck}"/>
     </Grid>
 </Window>
