fixed card picture folders tried more graphics stuff

--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
@@ -122,7 +122,7 @@
         <Image HorizontalAlignment="Left" Height="200" Margin="800,704,0,0" VerticalAlignment="Top" Width="140">
             
         </Image>
-        <Button Content="View Hand" HorizontalAlignment="Left" Height="47" Margin="400,920,0,0" VerticalAlignment="Top" Width="200"/>
+        <Button Content="View Hand" Click="ViewHand" HorizontalAlignment="Left" Height="47" Margin="400,920,0,0" VerticalAlignment="Top" Width="200"/>
 
 
     </Grid>
