--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SentinelsOfTheMultiverse.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Window1" Height="1000" Width="1000" DataContext="{Binding GameEngine}">
+        Title="Window1" Height="1000" Width="1000" >
     <Grid Margin="0,0,0,-6">
         <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="220" Margin="50,10,0,0" VerticalAlignment="Top" Width="900">
             <Image HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="70" Margin="10,110,0,0">
@@ -9,7 +9,7 @@
            
             </Image>
         </Border>
-        <Image x:Name="topDeckVillain" HorizontalAlignment="Left" Height="100" Margin="60 18,0,0" VerticalAlignment="Top" Width="70" RenderTransformOrigin="2.729,0.64" Source="{Binding villianImage}">
+        <Image x:Name="topDeckVillain" HorizontalAlignment="Left" Margin="60 18,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.729,0.64" Source="{Binding villianImage}">
             
         </Image>
         <Image HorizontalAlignment="Left" Height="200" Margin="160,20,0,0" VerticalAlignment="Top" Width="140" MouseDown="View_Card_Full">
