--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
@@ -2,19 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Window1" Height="1000" Width="1000" >
-    <Grid Margin="0,0,0,-6">
+    <!--<Grid Margin="0,0,0,-6">
         <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="220" Margin="50,10,0,0" VerticalAlignment="Top" Width="900">
             <Image HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="70" Margin="10,110,0,0">
                 
            
             </Image>
         </Border>
-        <Image x:Name="topDeckVillain" HorizontalAlignment="Left" Margin="60 18,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.729,0.64" Source="{Binding villianImage}">
-            
-        </Image>
-        <Image HorizontalAlignment="Left" Height="200" Margin="160,20,0,0" VerticalAlignment="Top" Width="140" MouseDown="View_Card_Full">
-            
-        </Image>
+        <Image x:Name="topDeckVillain" HorizontalAlignment="Left" Margin="60 18,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.729,0.64"/>
+        <Image HorizontalAlignment="Left" Height="200" Margin="160,20,0,0" VerticalAlignment="Top" Width="140" MouseDown="View_Card_Full"/>
         <Image HorizontalAlignment="Left" Height="200" Margin="320,20,0,0" VerticalAlignment="Top" Width="140">
             
             
@@ -125,5 +121,5 @@
         <Button Content="View Hand"  HorizontalAlignment="Left" Height="47" Margin="400,920,0,0" VerticalAlignment="Top" Width="200" Click="View_Hand"/>
 
 
-    </Grid>
+    </Grid>-->
 </Window>
