--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="SentinelsOfTheMultiverse.Window1"
+﻿<Window x:Class="SentinelsOfTheMultiverse.GameBoard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Window1" Height="1000" Width="1000" >
+        Title="Window1" Height="1000" Width="1000" DataContext="GameEngine">
     <!--<Grid Margin="0,0,0,-6">
         <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="220" Margin="50,10,0,0" VerticalAlignment="Top" Width="900">
             <Image HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="70" Margin="10,110,0,0">
