--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/GameBoard.xaml
@@ -2,5 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="GameBoard" Height="1000" Width="1000" DataContext="GameEngine">
-    
+    <Window.Resources>
+        <RoutedUICommand x:Key="ViewHand" Text="Text" />
+        <RoutedUICommand x:Key="PlayCard" Text="Text" />
+    </Window.Resources>
+    <Window.CommandBindings>
+        <CommandBinding Command="{StaticResource ViewHand}" Executed="View_Hand" />
+    </Window.CommandBindings>
+
+    <Window.InputBindings>
+        <KeyBinding Key="H" Command="{StaticResource ViewHand}" />
+    </Window.InputBindings>
 </Window>
