--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/DiscardFromHand.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/DiscardFromHand.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SentinelsOfTheMultiverse.DiscardFromHand"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DiscardFromHand" Height="300" Width="300">
+        Title="Discard from your hand:" Height="300" Width="300">
     <Grid>
         
     </Grid>
