--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/Start.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/Start.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="SentinelsOfTheMultiverse.Start"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Window1" Height="300" Width="300">
+        Title="Sentinels of the Multiverse" Height="960" Width="1024" Icon="Images/Logo.ico" SizeToContent="WidthAndHeight">
+    <Window.Background>
+        <ImageBrush Stretch="Fill" ImageSource="Images/SentinelsCover.jpg" AlignmentX="Center" AlignmentY="Top" />
+    </Window.Background>
     <Grid>
-        
+        <Button Content="Start!" HorizontalAlignment="Left" VerticalAlignment="Top" Width="180" Margin="826,817,0,0" Click= "Start_Game" Height="75"/>
+        <ComboBox x:Name="localizationChoicesBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="180" Margin="826,898,0,0"/>
     </Grid>
 </Window>
