--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/ViewHand.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/ViewHand.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SentinelsOfTheMultiverse.ViewHand"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="View Player Hand!" Height="400" Width="1200">
+        Title="View Player Hand!" Icon="Images/Logo.ico" Height="400" Width="1200">
     <Grid>
     </Grid>
     <Window.Resources>
