--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/DiscardFromBoard.xaml
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/DiscardFromBoard.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SentinelsOfTheMultiverse.DiscardFromBoard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Discard from cards currently in play:" Height="300" Width="300">
+        Title="Discard from cards currently in play:" Icon="Images/Logo.ico" Height="300" Width="300">
     <Grid>
         
     </Grid>
